p2/deployment/app3.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-3
  labels: 
    app: app-3 
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: app-3
  template: 
    metadata:
      labels:
        app: app-3
    spec:
      containers: 
      - name: app-3
        image: paulbouwer/hello-kubernetes:1.10.1
        imagePullPolicy: IfNotPresent
