p2/deployment/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress 

spec:
  rules:
    - host: "app1.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-1
                port:
                  number: 80

    - host: "app2.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-2
                port:
                  number: 80

    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app-3
                port:
                  number: 80
